# cpm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
examples/: read_from_file.rs  simple_example.rs  simple_example_float.rs
src/: customtask.rs  input_parser.rs  lib.rs  main.rs  path.rs  scheduler.rs  tests.rs
test/: duplicated_name.tasks.in  errorous_example.tasks.in  example.tasks.in  negative_length_error.tasks.in  real_example.tasks.in  simple.tasks.in
