[package]
name = "cpm-rs"
author = "Gergely Bencsik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[[bin]]
name = "schedule-tasks"
path = "src/main.rs"
