[package]
name = "cpm-rs"
authors = ["Gergely Bencsik <becsegergely@gmail.com>"]
version = "0.1.5"
edition = "2021"
description = "Simple Critical Path Method crate."
license = "MIT"
readme = "README.md"
repository = "https://github.com/errorport/cpm-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
log = "0.4.0"
env_logger = "0.9.0"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[lib]
bench = false
doctest = false

